<resources>
    <string name="full_name">Nombre Completo </string>
    <string name="fecha_nacimiento">fecha de Nacimiento </string>
    <string name="celular">Telefono o Celular</string>
    <string name="correo">Correo Electrónico</string>
    <string name="detalles">Descripcion</string>
    <string name="siguiente">Siguiente</string>


    //////////////Strings de activity 2/////////////////////
    <string name="app_name">MisContactos</string>
    <string name="confirmar_Datos">Confirmar Datos</string>
    <string name="nombre">Jhon Carlos Peña</string>
    <string name="cumpleaños">03/06/1980</string>
    <string name="telefono">55667789</string>
    <string name="email">jcpena@gmail.com</string>
    <string name="descripcion">Unisys - Valledupar</string>
    <string name="editar">Editar Datos</string>

</resources>